# skills-evolve-orchrstra

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  deepseek_router_planning.deepseek_router_planning_official.json  deepseek_router_planning_30rounds.deepseek_router_planning_30rounds_harness.json  environment.yml  eval.eval_run.json  pyproject.toml  terminal_bench_skills_gen.json  terminal_bench_skills_gen.raw.json  terminal_bench_skills_gen.raw01.json  terminal_bench_skills_gen01.json  terminal_bench_skills_gen_0704.json  terminal_bench_skills_gen_0704.raw.json  terminal_bench_skills_gen_0704_subtask_step.json  terminal_bench_skills_init.json
configs/: __init__.py  litellm.example.yaml  pools.deepseek_v32.yaml  pools.yaml
docs/: evaluation_environment.md
env/: __init__.py  base.py  env_manager.py  memory.py  prompts.py
eval_pipeline/: __main__.py  config.py  run.py
examples/: README.md  run_gpqa_smoke.sh
scripts/: build_terminalbench_subtask_step_skills.py  check_eval_env.py  collect_results.py  distill_terminalbench_skills.py  download_toolbench_data.sh  prepare_terminalbench_skill_rerun.py  rerun_terminalbench_from_commands_checkpoint.py  run_benchmark_deepseek.sh  run_benchmark_deepseek_v32_planner.sh  run_benchmark_qwen3_30b.sh  run_benchmark_qwen3_8b.sh  run_bn_fit_modify_skill_rerun.sh  run_distill_terminalbench_skills.sh  run_full_eval.sh  run_rubric_workflow_2020b.sh  run_smoke_eval.sh  run_tb_baseline.py  run_terminalbench_deepseek_v4_pro.sh  run_terminalbench_direct_gpt_oss_120b_free.py  run_terminalbench_direct_gpt_oss_120b_free.sh  (+11 more)
(+113 files in other folders)
